Skip to content

Regression of H264 playback with RC4

Tested on Windows XP Pro 32 bits.

There is an important regression with the playback of some H264 files with trunk-20090417-2225. The playback is stuttering a lot with many frame drops.

These files were playing fine with the previous version I was using: trunk-20090401-2206.

M2TS samples:

http://av.watch.impress.co.jp/docs/20080206/ezsm01.m2ts

http://x264.nl/marvel.m2ts

http://stfcc.org/misc/00000.cut2.m2ts

MKV samples:

http://files.filefront.com/juGGaKNot+4mkv/;12302469;/fileinfo.html

http://rapidshare.com/files/82525583/killa.sampla.x264.mkv.html

http://www.mediafire.com/download.php?mzzzlzeijwy

TS sample:

http://www.zshare.net/download/58850268086dcc51/

Edited by Lotesdelere
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information