Add missing call to glBindBuffer(..., 0) on first frame in PBO (default) mode. Fixes #2669.

This commit fixes a tricky race condition when video playback is used
simultaneously with textures. I could reproduce the bug roughly 1 time out
of 100 in a complex scenario where I was playing several video over HTTP,
as well as loading textures also over HTTP.
The error case is as follows:
  1. First frame of a video is received and displayed
  2. Texture image is received from the network and processed by the Tao
     texture cache
  3. The second frame of the video is received and displayed

Due to the missing glBindBuffer, step (1) would leave a buffer object bound to
GL_PIXEL_UNPACK_BUFFER. This would cause glTexImage2D() in step 2 to fail with
GL_INVALID_OPERATION. The apitrace tool (https://github.com/apitrace/apitrace)
would report:
 glDebugOutputCallback: High severity API error 1282,
 GL_INVALID_OPERATION error generated. Cannot access buffer data.